<resources>
    <string name="app_name">Ο Φεμινισμός στα χρόνια της Μεταπολίτευσης</string>

    <string name="ena">Η πρόεδρος του Εθνικού Συμβουλίου Ελληνίδων υποδέχεται τις εκλεγμένες βουλευτές των πρώτων εκλογών της Μεταπολίτευσης Λίνα Κατηφόρη, Βιργινία Τουδερού και Σύλβα Ακρίτα.\n\n14 Ιανουαρίου 1975, Αρχείο ΕΡΤ\n</string>
    <string name="dio">Συνέντευξη της προέδρου της Συντονιστικής Επιτροπής Εργαζομένων Γυναικών. Ακολουθεί ομιλία εκπροσώπου της Επιτροπής στην πρώτη εκδήλωση μετά την πτώση της Δικτατορίας.\n\n14 Απριλίου 1975, Αρχείο ΕΡΤ\n</string>
    <string name="tria">Δημόσια συζήτηση από τη Συντονιστική Επιτροπή Εργαζομένων Γυναικών στο Πνευματικό Κέντρο του Δήμου Αθηναίων. Μιλούν επίσης εκπρόσωποι από την Ένωση Ελληνίδων Νομικών και τη Δημοκρατική Ένωση Νέων Γυναικών.\n\n12 Μαρτίου 1976, Αρχείο ΕΡΤ\n</string>
    <string name="tessera">Η ιδρυτική συνέλευση της Ομοσπονδίας Γυναικών Ελλάδος στον κινηματογράφο "Ίλιον", με κύρια ομιλήτρια τη νομικό Ρίτα Τζινιάδη.\n\n20 Ιουνίου 1976, Αρχείο ΕΡΤ\n</string>
    <string name="pente">Συνέντευξη της αντιπροέδρου της Ομοσπονδίας Γυναικών Ελλάδος Ζήλης Σακελλαρίδη, με αφορμή την Παγκόσμια Ημέρα της Γυναίκας. Αναφέρονται τα προβλήματα των εργαζομένων γυναικών τη μεταπολεμική εποχή.\n\n8 Μαρτίου 1977, Αρχείο ΕΡΤ\n</string>
    <string name="eksi">Σύσκεψη των Ευρωπαϊκών Οργανώσεων Γυναικών, με πρωτοβουλία του Εθνικού Συμβουλίου Ελληνίδων. Συζήτηση με θέμα "Γυναίκα και Μετανάστευση".\n\n23 Απριλίου 1977, Αρχείο ΕΡΤ\n</string>
    <string name="epta">Συγκέντρωση γυναικών στα Προπύλαια και πορεία με αιτήματα υπέρ της ισότητας και κατά της βίας.\n\n6 Οκτωβρίου 1980, Αρχείο ΕΡΤ\n</string>
    <string name="okto">Πορεία διαμαρτυρίας γυναικών στην Αθήνα για το Κυπριακό. Παρευρίσκονται ο πρέσβης της Κυπριακής Δημοκρατίας Δήμος Χατζημιλτής, ο δήμαρχος Αθηναίων Μιλτιάδης Έβερτ, οι βουλευτές Άννα Συνοδινού, Ειρήνη Λαμπράκη, Καλλιόπη Μπουρδάρα και η πρόεδρος της ΕΓΕ Μαργαρίτα Παπανδρέου.\n\n20 Φεβρουαρίου 1987, Αρχείο ΕΡΤ\n</string>
    <string name="ennea">Αφιέρωμα της εκπομπής \'Περισκόπιο\' στην ιστορία του ελληνικού φεμινιστικού εντύπου.\n\n1987, Αρχείο ΕΡΤ\n</string>
    <string name="deka">Ντοκυμαντέρ - αφιέρωμα στην πρώτη Ελληνίδα βουλευτή Ελένη Σκούρα, με αναφορές στην ιστορία του γυναικείου κινήματος στην Ελλάδα.\n\n1990, Αρχείο ΕΡΤ\n</string>

    <string name="idrima">\n</string>
</resources>