<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/arxiki"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            style="@style/AppTheme.AppBarOverlay"
            android:id="@+id/app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/action_bar"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name"
                app:titleMargin="4dp"
                app:paddingStart="4dp"
                app:logo="@mipmap/ic_launcher" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/app"
            android:background="@color/colorWhite">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@drawable/shadow" />

                <android.support.v7.widget.CardView
                    android:id="@+id/c1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/ena"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c1"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/dio"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c2"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/tria"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c3"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/tessera"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c4"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/pente"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c5"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/eksi"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c6"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/epta"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c7"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/okto"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c8"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/ennea"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/c10"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/c9"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/t10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:drawableBottom="@drawable/play"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/deka"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/t11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/c10"
                    android:drawableBottom="@drawable/logo"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/idrima"
                    android:textAlignment="center"
                    android:textColor="@color/card_background"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>